# object-descriptions

./: .gitignore  Dockerfile  README.md  build-run.sh  setup.sh
meshes/visual/soccerball/: README.md
objects/: box.urdf.xacro  box.xacro  open_box.urdf.xacro  open_box.xacro  soccerball.urdf.xacro  soccerball.xacro  table.urdf.xacro  table.xacro
ros/: CMakeLists.txt  package.xml
ros/launch/: box.launch  soccerball.launch  table.launch
ros/rviz/: object.rviz
ros2/: CMakeLists.txt  package.xml
ros2/launch/: ball.launch.py  box.launch.py  table.launch.py
