<?xml version="1.0"?>
<package format="3">
  <name>object_descriptions</name>
  <version>0.0.0</version>
  <description>This package contains the URDF and meshes describing objects for simulation.</description>
  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>